css/style.css
@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Martian+Mono&display=swap");

:root {
  font-size: 16px;
  --color-1: #70c4b2;
  --color-2: #1d6c76;
  --color-3: #fafafa;
  --color-4: #062530;
  --color-5: #7e7e7e;
  --color-6: #b15b00;
  --color-7: #f2a812;
  --bg-color-1: #000000;
  --bg-color-2: #fafafa;
  --transition-speed: 500ms;
}

body {
  color: var(--color-1);
  background: var(--bg-color-1);
  margin: 0;
  padding: 0;
  font-family: "Martian Mono", monospace;
}

/* SCROLLBAR */

body::-webkit-scrollbar {
  width: 0.25rem;
}

/* NAVBAR */
.navbar {
    height: 75px;
}

.nav-link {
  color: var(--color-1);
}

.nav-link:hover {
  animation: nav-hover var(--transition-speed);
  animation-fill-mode: forwards;
}

.active-page {
  color: var(--color-7) !important;
}

@keyframes nav-hover {
  0% {
    color: var(--color-1);
  }
  100% {
    color: var(--color-7);
  }
}

/* Navbar animated toggler */
.navbar-toggler {
  width: 20px;
  height: 20px;
  position: relative;
  transition: 0.5s ease-in-out;
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
  outline: none;
  box-shadow: none;
  border: 0;
}

.navbar-toggler span {
  margin: 0;
  padding: 0;
}

.toggler-icon {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: var(--color-1);
  border-radius: 1px;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: 0.25s ease-in-out;
}

.middle-bar {
  margin-top: 0px;
}

/* Navigation Clicked */

.navbar-toggler .top-bar {
  margin-top: 0px;
  transform: rotate(135deg);
}

.navbar-toggler .middle-bar {
  opacity: 0;
  filter: alpha(opacity=0);
}

.navbar-toggler .bottom-bar {
  margin-top: 0px;
  transform: rotate(-135deg);
}

/* Navigation Collapsed */
.navbar-toggler.collapsed .top-bar {
  margin-top: -20px;
  transform: rotate(0deg);
}

.navbar-toggler.collapsed .middle-bar {
  opacity: 1;
  filter: alpha(opacity=100);
}

.navbar-toggler.collapsed .bottom-bar {
  margin-top: 20px;
  transform: rotate(0deg);
}

/* Home */

.title-container {
  min-height: calc(100vh - 50px);
}

.title-1 {
  font-size: 2.5vw;
  color: var(--color-7);
}

.title-2 {
  font-family: "Dela Gothic One", sans-serif;
  font-size: 10vw;
}

.bounce-in {
  animation: bounce-in 2s ease;
}
@keyframes bounce-in {
  0% {
    opacity: 0;
    transform: scale(0.1);
  }
  50% {
    opacity: 1;
    transform: scale(1.2);
  }
  70% {
    transform: scale(0.9);
  }
  100% {
    transform: scale(1);
  }
}

.home-logo {
  width: 15vw;
  height: 15vw;
}

.navbar-logo {
  width: 50px;
  height: 50px;
}

/* SERVICES */
.services-container {
  min-height: calc(100vh - 80px);
  background-color: var(--bg-color-1);
  padding:0px 50px;
  margin-bottom: 2rem;
}

.services-title {
  font-size: 5rem;
}

.services-card {
  margin-top: 100px;
  min-height: 500px;
}

.services-card-header{
  font-size: 3rem;
  color: var(--color-7);
  padding: 1rem 0px;
}

.services-card-subheader{
  font-size: 1.75rem;
}

.services-card-p {
  margin-top: 30px;
  font-size: 1.25rem;
} 

.q {
  color: var(--color-7);
}

.btn-outline-info {
  color: var(--color-7);
  border-color: var(--color-2);
}

.btn-outline-info:hover {
  color: var(--bg-color-1);
  background-color: var(--color-1);
  border-color: var(--color-2);
}


/**
 * Basic CSS Media Query Template
 * ------------------------------------------
 *  Responsive Grid Media Queries - 1280, 1024, 768, 480
 *   1280-1024   - desktop (default grid)
 *   1024-768    - tablet landscape
 *   768-480     - tablet 
 *   480-less    - phone landscape & smaller
 * --------------------------------------------
 */
@media all and (min-width: 1024px) and (max-width: 1280px) {
}

@media all and (min-width: 768px) and (max-width: 1024px) {
  .home-logo {
    width: 18vw;
    height: 18vw;
  }

  .services-card-header {
    font-size: 3rem;
  }
}

@media all and (min-width: 480px) and (max-width: 768px) {
  .title-1 {
    font-size: 2.75vw;
    color: var(--color-7);
  }

  .home-logo {
    width: 20vw;
    height: 20vw;
  }

  .services-title {
    font-size: 4rem;
  }

  .services-card-header {
    font-size: 2rem;
  }

  .services-card-subheader{
    font-size: 1.25rem;
  }
  
  .services-card-p {
    font-size: 0.9rem;
  }

  .services-card {
    margin-top: 100px;
    min-height: auto;
  }
  
}

@media all and (max-width: 480px) {
  .title-1 {
    font-size: 3vw;
    color: var(--color-7);
  }
  .home-logo {
    width: 25vw;
    height: 25vw;
  }

  .services-title {
    font-size: 3rem;
  }

  .services-card-header {
    font-size: 1.2rem;
  }

  .services-card-subheader{
    font-size: 1rem;
  }
  
  .services-card-p {
    font-size: 0.9rem;
  }

  .services-card {
    margin-top: 100px;
    min-height: auto;
  }
}

